scrollbar issues fix

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -272,8 +272,10 @@ COMPONENTS
   width: 100%;
   color: $dark-text;
   overflow-y: scroll;
-  -ms-overflow-style: none; // IE 10+
-  overflow: -moz-scrollbars-none; // Firefox
+  ::-webkit-scrollbar {
+    width: 0px; /* Remove scrollbar space */
+    background: transparent; /* Optional: just make scrollbar invisible */
+  }
 }
 
 //  re-useable
